--- a/demo/sunday-demo-admin/src/main/webapp/WEB-INF/template/layout/old-layout.vm
+++ b/demo/sunday-demo-admin/src/main/webapp/WEB-INF/template/layout/old-layout.vm
@@ -3,23 +3,23 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title></title>
-<link rel="stylesheet" type="text/css" href="${staticRoot}/comm/oldAdmin/css/reset.source.css" />
-<link rel="stylesheet" type="text/css" href="${staticRoot}/comm/oldAdmin/css/baselayout.css" />
-<link rel="stylesheet" type="text/css" href="${staticRoot}/comm/oldAdmin/css/putin.css" />
-<link rel="stylesheet" type="text/css" href="${staticRoot}/comm/jquery-easyui/themes/default/easyui.css">
-<link rel="stylesheet" type="text/css" href="${staticRoot}/comm/jquery-easyui/themes/icon.css">
-<link rel="stylesheet" type="text/css" href="${staticRoot}/comm/jquery-easyui/demo/demo.css">
+<link rel="stylesheet" type="text/css" href="${staticRoot}/common/oldAdmin/css/reset.source.css" />
+<link rel="stylesheet" type="text/css" href="${staticRoot}/common/oldAdmin/css/baselayout.css" />
+<link rel="stylesheet" type="text/css" href="${staticRoot}/common/oldAdmin/css/putin.css" />
+<link rel="stylesheet" type="text/css" href="${staticRoot}/common/jquery-easyui/themes/default/easyui.css">
+<link rel="stylesheet" type="text/css" href="${staticRoot}/common/jquery-easyui/themes/icon.css">
+<link rel="stylesheet" type="text/css" href="${staticRoot}/common/jquery-easyui/demo/demo.css">
 	
-<link type="text/css" href="${staticRoot}/comm/css/common.css" rel="stylesheet" />
-<link type="text/css" href="${staticRoot}/comm/css/wbox.css" rel="stylesheet" />
+<link type="text/css" href="${staticRoot}/common/css/commonon.css" rel="stylesheet" />
+<link type="text/css" href="${staticRoot}/common/css/wbox.css" rel="stylesheet" />
 
-<script type="text/javascript" src="${staticRoot}/comm/oldAdmin/base.js"></script>
-<script type="text/javascript" src="${staticRoot}/comm/My97DatePicker/WdatePicker.js"></script>
-<script type="text/javascript" src="${staticRoot}/comm/jquery-easyui/jquery-1.8.0.min.js"></script>
-<script type="text/javascript" src="${staticRoot}/comm/jquery-easyui/jquery.easyui.min.js"></script>
-<script type="text/javascript" src="${staticRoot}/comm/jquery-easyui/myself-easyui-tools.js"></script>
-<script type="text/javascript" src="${staticRoot}/comm/jquery-easyui/locale/easyui-lang-zh_CN.js"></script>
-<script charset="utf-8" src="${staticRoot}/comm/kindeditor-4.1.7/kindeditor.js"></script>
+<script type="text/javascript" src="${staticRoot}/common/oldAdmin/base.js"></script>
+<script type="text/javascript" src="${staticRoot}/common/My97DatePicker/WdatePicker.js"></script>
+<script type="text/javascript" src="${staticRoot}/common/jquery-easyui/jquery-1.8.0.min.js"></script>
+<script type="text/javascript" src="${staticRoot}/common/jquery-easyui/jquery.easyui.min.js"></script>
+<script type="text/javascript" src="${staticRoot}/common/jquery-easyui/myself-easyui-tools.js"></script>
+<script type="text/javascript" src="${staticRoot}/common/jquery-easyui/locale/easyui-lang-zh_CN.js"></script>
+<script charset="utf-8" src="${staticRoot}/common/kindeditor-4.1.7/kindeditor.js"></script>
 </head>
 <body>
  $screen_content
