--- a/demo/sunday-demo-admin/src/main/webapp/WEB-INF/template/screen/index.vm
+++ b/demo/sunday-demo-admin/src/main/webapp/WEB-INF/template/screen/index.vm
@@ -20,6 +20,7 @@
 	<script type="text/javascript" src="$!{staticRoot}/common/jquery-easyui/city2.js"></script>
 	<script type="text/javascript" src="$!{staticRoot}/common/jquery-easyui/plugins/jquery.treegrid.js"></script>
 	<script type="text/javascript" src="$!{staticRoot}/common/jquery-easyui/plugins/jquery.tree.js"></script>
+	<script type="text/javascript" src="$!{staticRoot}/common/js/uploadPreview.js"></script>
 	
    	<style type="text/css"> 
 		.yisheng-menu-div div { 
@@ -64,8 +65,8 @@
    <div region="north" border="false" style="BACKGROUND:#E6E6FA;height: 65px; padding: 1px; overflow: hidden;">
 	   <table width="100%" border="0" cellpadding="0" cellspacing="0">
 		<tr>
-		 <td align="left" style="vertical-align:text-bottom" >
-			 <img src="$!{staticRoot}/byt/images/logo.png"  alt="">
+		 <td align="left" style="vertical-align:text-bottom;padding-top: 15px;" >
+			 <img src="$!{staticRoot}/demo/images/logo.png"  alt="">
 		 </td>
 		 <td align="right" nowrap>
 		  <table>
